@@ -1,0 +1,3 @@
+a {
+    color: aliceblue;
+}
