@@ -1,12 +1,12 @@
 <p *ngIf="myInfo == undefined">Failed fetching data</p>
-<div *ngIf="myInfo != undefined" class="container-fluid">
+<div *ngIf="myInfo != undefined" class="container-fluid bg-primary">
 <div class="row">
     <div class="col-3">
         User: {{myInfo.FirstName}} {{myInfo.LastName}}
     </div>
     <div class="col-6">
-        <a href={{myInfo.Github}}>Github: {{myInfo.Github}}</a>
+        <a href={{myInfo.GitHub}}>Github: {{myInfo.GitHub}}</a>
     </div>
-    <div class="col-3">email {{myInfo.mix_id}}@mix.wvu.edu</div>
+    <div class="col-3">email {{myInfo.mixID}}@mix.wvu.edu</div>
 </div>
 </div>
