@@ -1,6 +1,6 @@
 export interface UserInfo {
     FirstName: string;
     LastName: string;
-    Github: string;
-    mix_id: string;
+    GitHub: string;
+    mixID: string;
 }
