@@ -1,3 +1,5 @@
+<ar-user-info>Loading...</ar-user-info>
+
 <ar-topnavbar1>Loading...</ar-topnavbar1>
 
 
